be(fix) #52 : fix user/program table columns to enum
